--- a/storefront/src/app/navbar/navbar.component.html
+++ b/storefront/src/app/navbar/navbar.component.html
@@ -1,1 +1,3 @@
-<p>navbar works!</p>
+<header class="sm:w-full sm:overflow-hidden sm:flex sm:items-center sm:py-3 sm:px-20 sm:shadow-lg">
+    <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
+</header>
