search input created

--- a/storefront/src/app/navbar/navbar.component.html
+++ b/storefront/src/app/navbar/navbar.component.html
@@ -1,3 +1,18 @@
-<header class="sm:w-full sm:overflow-hidden sm:flex sm:items-center sm:py-3 sm:px-20 sm:shadow-lg">
-    <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
+<header class="sm:w-full sm:overflow-hidden sm:flex items-center justify-between py-3 px-20 shadow-lg">
+    <div class="flex gap-36 items-center">
+        <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
+        <button class="text-white bg-primary cursor-pointer py-1 px-10 font-medium">Retail</button>
+    </div>
+    <div class="flex items-center justify-between py-1 px-5 border border-secondary cursor-pointer">
+        <input 
+            type="text" 
+            placeholder="Search"
+            class="outline-none border-r border-slate-300"
+        />    
+        <img src="../../assets/search-icon.svg" alt="search-icon" class="w-5 ml-3">
+    </div>
+    <div class="flex">
+        <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
+        <button class="text-white bg-primary cursor-pointer py-1 px-8">Retail</button>
+    </div>
 </header>
