--- a/storefront/src/app/navbar/navbar.component.html
+++ b/storefront/src/app/navbar/navbar.component.html
@@ -1,19 +1,25 @@
 <header class="sm:w-full sm:overflow-hidden sm:flex items-center gap-20 py-3 px-20 shadow-lg">
     <div class="flex gap-36 items-center w-1/3">
         <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
-        <button class="text-white bg-primary cursor-pointer py-1 px-10 font-medium rounded-sm">Retail</button>
+        <button class="text-white bg-primary cursor-pointer py-1 px-10 font-medium rounded-sm hover-btn">Retail</button>
     </div>
     <div class="flex items-center justify-between py-1 px-5 border border-secondary cursor-pointer w-2/5">
         <input 
             type="text" 
             placeholder="Search"
-            class="outline-none border-r border-slate-300 w-full"
+            class="outline-none border-r border-slate-300 w-full cursor-pointer"
         />    
-        <img src="../../assets/search-icon.svg" alt="search-icon" class="w-5 ml-3">
+        <img src="../../assets/search-icon.svg" alt="search-icon" class="w-5 ml-3 cursor-pointer">
     </div>
     <div class="flex items-center w-1/3 gap-10">
         <img src="../../assets/cart.svg" alt="cart-icon">
-        <button class="text-black bg-none cursor-pointer font-normal text-2xl">Login</button>
-        <button class="text-white bg-primary cursor-pointer py-1 px-6 font-medium rounded-sm">Signup</button>
+        <button 
+            class="text-black bg-none cursor-pointer font-normal text-xl hover:text-secondary">
+            Login
+        </button>
+        <button 
+            class="text-white bg-primary cursor-pointer py-1 px-6 font-medium rounded-sm hover-btn">
+            Signup
+        </button>
     </div>
 </header>
