category-nav done

--- a/storefront/src/app/navbar/navbar.component.html
+++ b/storefront/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="sm:w-full sm:overflow-hidden sm:flex items-center gap-20 py-3 px-20 shadow-lg">
+<header class="sm:w-full sm:overflow-hidden sm:flex items-center gap-20 py-3 px-20 shadow">
     <div class="flex gap-36 items-center w-1/3">
         <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
         <button class="text-white bg-primary cursor-pointer py-1 px-10 font-medium rounded-sm hover-btn">Retail</button>
