--- a/storefront/src/app/category-navbar/category-navbar.component.html
+++ b/storefront/src/app/category-navbar/category-navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="flex items-center gap-5">
-    <a href="/men">Women</a>
-    <a href="/men">Men</a>
-    <a href="/men">Kids</a>
-    <a href="/men">Accessories</a>
+<nav class="w-full flex items-center gap-5 justify-center py-4 shadow-lg">
+    <a href="/women" class="text-center text-primary px-5 hover:text-secondary font-medium">Women</a>
+    <a href="/men" class="text-center text-primary px-5 hover:text-secondary font-medium">Men</a>
+    <a href="/kids" class="text-center text-primary px-5 hover:text-secondary font-medium">Kids</a>
+    <a href="/accessories" class="text-center text-primary px-5 hover:text-secondary font-medium">Accessories</a>
 </nav>
