--- a/storefront/src/app/navbar/navbar.component.html
+++ b/storefront/src/app/navbar/navbar.component.html
@@ -1,7 +1,11 @@
 <header class="sm:w-full sm:overflow-hidden sm:flex items-center gap-20 py-3 px-20 shadow">
     <div class="flex gap-36 items-center w-1/3">
         <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
-        <button class="text-white bg-primary cursor-pointer py-1 px-10 font-medium rounded-sm hover-btn">Retail</button>
+        <button 
+            class="text-white bg-primary cursor-pointer py-1 px-10 font-medium rounded-sm hover-btn"
+        >
+            Retail
+        </button>
     </div>
     <div class="flex items-center justify-between py-1 px-5 border border-secondary cursor-pointer w-2/5">
         <input 
@@ -11,16 +15,20 @@
         />    
         <img src="../../assets/search-icon.svg" alt="search-icon" class="w-5 ml-3 cursor-pointer">
     </div>
-    <div class="flex items-center w-1/3 gap-10">
-        <img src="../../assets/cart.svg" alt="cart-icon">
-        <button 
-            class="text-black bg-none cursor-pointer font-normal text-xl hover:text-secondary">
+    <div class="flex items-center w-1/3 gap-16">
+        <img src="../../assets/cart.svg" alt="cart-icon" class="-ml-10">
+        <div class="flex items-center justify-between w-full">
+            <button 
+                class="text-black bg-none cursor-pointer font-normal text-xl hover:text-secondary ml-5"
+            >
             Login
-        </button>
-        <button 
-            class="text-white bg-primary cursor-pointer py-1 px-6 font-medium rounded-sm hover-btn">
-            Signup
-        </button>
+            </button>
+            <button 
+                class="text-white bg-primary cursor-pointer py-1 px-6 font-medium rounded-sm hover-btn"
+                >
+                Signup
+            </button>
+        </div>
     </div>
 </header>
 <app-category-navbar></app-category-navbar>
