--- a/storefront/src/app/navbar/navbar.component.html
+++ b/storefront/src/app/navbar/navbar.component.html
@@ -1,38 +1,48 @@
-<header class="sm:w-full sm:overflow-hidden sm:flex items-center gap-20 py-3 px-20 shadow">
-    <div class="flex gap-36 items-center w-1/3">
-        <h1 class="text-primary text-3xl font-semibold">LOGO</h1>
-        <button 
-            class="text-white bg-primary cursor-pointer py-1 px-10 font-medium rounded-sm hover-btn"
+<header
+  class="sm:w-full sm:overflow-hidden sm:flex items-center gap-20 py-3 px-20 shadow"
+>
+  <div class="flex gap-20 items-center w-1/3">
+    <h1 class="text-primary text-3xl font-semibold">DripLuxury</h1>
+    <button
+      class="text-white bg-primary cursor-pointer py-1 px-8 font-medium rounded-lg hover-btn"
+    >
+      Retail
+    </button>
+  </div>
+
+  <div
+    class="flex items-center justify-between py-1 px-5 border border-secondary cursor-pointer w-2/5 rounded-full"
+  >
+    <input
+      type="text"
+      placeholder="Search"
+      class="outline-none border-r border-slate-300 w-full cursor-pointer"
+    />
+    <img
+      src="../../assets/search-icon.svg"
+      alt="search-icon"
+      class="w-5 ml-3 cursor-pointer"
+    />
+  </div>
+
+  <div class="flex items-center w-1/3 gap-16">
+    <img src="../../assets/cart.svg" alt="cart-icon" class="-ml-10" />
+    <div class="flex items-center justify-between w-full">
+      <a routerLink="login">
+        <button
+          class="text-black bg-none cursor-pointer font-normal text-xl hover:text-secondary ml-5"
         >
-            Retail
+          Login
         </button>
+      </a>
+      <a routerLink="signup">
+        <button
+          class="text-white bg-primary cursor-pointer py-1 px-6 font-medium rounded-lg hover-btn"
+        >
+          Signup
+        </button>
+      </a>
     </div>
-    <div class="flex items-center justify-between py-1 px-5 border border-secondary cursor-pointer w-2/5 rounded-full">
-        <input 
-            type="text" 
-            placeholder="Search"
-            class="outline-none border-r border-slate-300 w-full cursor-pointer"
-        />    
-        <img src="../../assets/search-icon.svg" alt="search-icon" class="w-5 ml-3 cursor-pointer">
-    </div>
-    <div class="flex items-center w-1/3 gap-16">
-        <img src="../../assets/cart.svg" alt="cart-icon" class="-ml-10">
-        <div class="flex items-center justify-between w-full">
-            <a routerLink="login">
-                <button 
-                class="text-black bg-none cursor-pointer font-normal text-xl hover:text-secondary ml-5"
-                >
-                Login
-                </button>
-            </a>
-            <a routerLink="signup">
-                <button 
-                class="text-white bg-primary cursor-pointer py-1 px-6 font-medium rounded-sm hover-btn"
-                >
-                Signup
-                </button>
-            </a>
-        </div>
-    </div>
+  </div>
 </header>
 <app-category-navbar></app-category-navbar>
