login component updated

--- a/DripLuxury-Closet/src/app/login/login.component.html
+++ b/DripLuxury-Closet/src/app/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="w-full flex items-center justify-center flex-col h-screen">
+    <div class="w-3/4 bg-white h-auto rounded-lg shadow-2xl grid grid-cols-2">
+        <div class="flex flex-col px-12 py-8 w-1/2">
+            <h1 class="text-xl font-medium text-blue">DripLuxury</h1>
+            <form 
+                action="#" 
+                class="w-80 h-auto bg-yellow-200 shadow-2xl border-none p-6"
+            >
+                <h4 class="text-center text-2xl text-black font-medium">Login</h4>
+            </form>
+        </div>
+        <div class="img">
+            <!-- <img src="../../assets/login/img-1.jpg" alt=""> -->
+        </div>
+    </div>
+</div>
