--- a/DripLuxury-Closet/src/app/login/login.component.html
+++ b/DripLuxury-Closet/src/app/login/login.component.html
@@ -16,7 +16,7 @@
                         formControlName="email"
                         placeholder="login@email.com"
                         id="email"
-                        class="border-b-2 border-sky-300 cursor-pointer py-2 focus-within:outline-none"
+                        class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
                     >
                 </div>
                 <div class="flex flex-col gap-2">
@@ -26,7 +26,7 @@
                         formControlName="email"
                         placeholder="**********"
                         id="password"
-                        class="border-b-2 border-sky-300 cursor-pointer py-2 focus-within:outline-none"
+                        class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
                     >
                 </div>
                 <button 
@@ -35,7 +35,7 @@
                 >
                     Login
                 </button>
-                <a routerLink="signup" class="text-center text-black font-medium">Create an Account</a>
+                <a routerLink="signup" class="text-center text-black font-medium hover:underline hover:text-sky-300">Create an Account</a>
             </form>
         </div>
         <div class="w-full">
