login images added

--- a/DripLuxury-Closet/src/app/login/login.component.html
+++ b/DripLuxury-Closet/src/app/login/login.component.html
@@ -39,7 +39,7 @@
             </form>
         </div>
         <div class="w-full">
-            <img src="../../assets/login/login-img.jpg" class="rounded-r-xl" alt="">
+            <img src="../../assets/login/login-2.jpg" class="rounded-r-xl" alt="">
         </div>
     </div>
 </div>
