signup component created

--- a/DripLuxury-Closet/src/app/login/login.component.html
+++ b/DripLuxury-Closet/src/app/login/login.component.html
@@ -35,7 +35,7 @@
                 >
                     Login
                 </button>
-                <a routerLink="signup" class="text-center text-black font-medium hover:underline hover:text-sky-300">Create an Account</a>
+                <a routerLink="/signup" class="text-center text-black font-medium hover:underline hover:text-sky-300">Create an Account</a>
             </form>
         </div>
         <div class="max-w-full">
