--- a/DripLuxury-Closet/src/app/login/login.component.html
+++ b/DripLuxury-Closet/src/app/login/login.component.html
@@ -1,54 +1,61 @@
 <div class="w-full flex items-center justify-center flex-col h-screen">
-    <div class="w-3/4 bg-white h-auto rounded-xl shadow-2xl grid grid-cols-2">
-        <div class="flex flex-col px-12 py-8 w-1/2">
-            <h1 class="text-xl font-medium text-sky-500 mb-10">DripLuxury</h1>
-            <form 
-                [formGroup]="applyLogin"
-                (submit)="validateForm()"
-                action="#" 
-                class="w-96 h-auto border-none py-6 px-10 flex gap-4 flex-col"
-            >
-                <h4 class="text-center text-2xl text-black font-medium">Login</h4>
-                <div class="flex flex-col gap-2">
-                    <label for="email" class="text-sm text-gray-600 font-medium">Email</label>
-                    <input 
-                        type="email"
-                        formControlName="email"
-                        placeholder="login@email.com"
-                        id="email"
-                        class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-                    >
-                </div>
-                <div class="flex flex-col gap-2">
-                    <label for="password" class="text-sm text-gray-600 font-medium">Password</label>
-                    <input 
-                        type="password"
-                        formControlName="email"
-                        placeholder="**********"
-                        id="password"
-                        class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-                    >
-                </div>
-                <button 
-                    type="submit"
-                    class="w-full py-2 bg-sky-300 cursor-pointer text-white font-medium rounded-md hover:bg-white hover:text-sky-300 hover:border-2 hover:border-sky-300"
-                >
-                    Login
-                </button>
-                <a routerLink="/signup" class="text-center text-black font-medium hover:underline hover:text-sky-300">Create an Account</a>
-            </form>
+  <div class="w-3/4 bg-white h-auto rounded-xl shadow-2xl grid grid-cols-2">
+    <div class="flex flex-col px-12 py-8 w-1/2">
+      <h1 class="text-xl font-medium text-sky-500 mb-10">DripLuxury</h1>
+      <form
+        [formGroup]="applyLogin"
+        (submit)="validateForm()"
+        action="#"
+        class="w-96 h-auto border-none py-6 px-10 flex gap-4 flex-col"
+      >
+        <h4 class="text-center text-2xl text-black font-medium">Login</h4>
+        <div class="flex flex-col gap-2">
+          <label for="email" class="text-sm text-gray-600 font-medium"
+            >Email</label
+          >
+          <input
+            type="email"
+            formControlName="email"
+            placeholder="login@email.com"
+            id="email"
+            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
+          />
         </div>
-        <div class="max-w-full">
-            <app-carousel 
-                [images]="
-                [
-                    '../../assets/login/login-img.jpg', 
-                    '../../assets/login/login-2.jpg', 
-                    '../../assets/login/login-3.jpg', 
-                    '../../assets/login/login-4.jpg'
-                ]"
-            >
-            </app-carousel>
+        <div class="flex flex-col gap-2">
+          <label for="password" class="text-sm text-gray-600 font-medium"
+            >Password</label
+          >
+          <input
+            type="password"
+            formControlName="email"
+            placeholder="**********"
+            id="password"
+            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
+          />
         </div>
+        <button
+          type="submit"
+          class="w-full py-2 bg-sky-300 cursor-pointer text-white font-medium rounded-md hover:bg-white hover:text-sky-300 hover:border-2 hover:border-sky-300"
+        >
+          Login
+        </button>
+        <a
+          routerLink="/signup"
+          class="text-center text-black font-medium hover:underline hover:text-sky-300"
+          >Create an Account</a
+        >
+      </form>
     </div>
+    <div class="max-w-full">
+      <app-carousel
+        [images]="[
+          '../../assets/login/login-img.jpg',
+          '../../assets/login/login-2.jpg',
+          '../../assets/login/login-3.jpg',
+          '../../assets/login/login-4.jpg'
+        ]"
+      >
+      </app-carousel>
+    </div>
+  </div>
 </div>
