after classes added to categories navigation

--- a/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
+++ b/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
@@ -17,20 +17,20 @@
 
   <nav class="">
     <ul>
-      <li class="inline-block mx-4 text-black">
-        <a routerLink="/men">Men</a>
+      <li class="inline-block mx-2 text-black">
+        <a routerLink="/men" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Men</a>
       </li>
-      <li class="inline-block mx-4 text-black">
-        <a routerLink="/women">Women</a>
+      <li class="inline-block mx-2 text-black">
+        <a routerLink="/women" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Women</a>
       </li>
-      <li class="inline-block mx-4 text-black">
-        <a routerLink="/kids">Kids</a>
+      <li class="inline-block mx-2 text-black">
+        <a routerLink="/kids" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Kids</a>
       </li>
-      <li class="inline-block mx-4 text-black">
-        <a routerLink="/accessories">Accessories</a>
+      <li class="inline-block mx-2 text-black">
+        <a routerLink="/accessories" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Accessories</a>
       </li>
-      <li class="inline-block mx-4 text-black">
-        <a routerLink="/perfumes">Perfumes</a>
+      <li class="inline-block mx-2 text-black">
+        <a routerLink="/perfumes" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Perfumes</a>
       </li>
     </ul>
   </nav>
