--- a/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
+++ b/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <nav class="">
+  <nav>
     <ul>
       <li class="inline-block mx-2 text-black">
         <a routerLink="/men" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Men</a>
@@ -34,4 +34,19 @@
       </li>
     </ul>
   </nav>
+
+  <div class="flex items-center gap-4">
+    <div class="flex items-center gap-2">
+        <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
+        <p>Bag</p>
+    </div>
+    <div class="flex items-center gap-2">
+        <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
+        <p>Bag</p>
+    </div>
+    <div class="flex items-center gap-2">
+        <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
+        <p>Bag</p>
+    </div>
+  </div>
 </header>
