user icon added

--- a/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
+++ b/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
@@ -37,8 +37,8 @@
 
   <div class="flex items-center gap-4">
     <div class="flex items-center gap-2">
-        <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
-        <p>Bag</p>
+        <fa-icon [icon]="faUser" class="text-2xl text-sky-900"></fa-icon>
+        <p>Login</p>
     </div>
     <div class="flex items-center gap-2">
         <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
