--- a/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
+++ b/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
@@ -1,52 +1,79 @@
 <header
   class="w-full overflow-hidden bg-white shadow-xl fixed top-0 z-10 px-12 py-5 flex items-center justify-between"
 >
-  <div class="flex items-center gap-4">
-    <h1 class="text-sky-300 font-bold text-3xl">DripLuxury</h1>
-    <div
-      class="w-72 flex items-center gap-3 rounded-full border px-4 py-1 focus-within:border-sky-400"
-    >
-      <fa-icon [icon]="faSearch"></fa-icon>
-      <input
-        type="text"
-        placeholder="Search"
-        class="border-none focus-within:outline-none w-full text-sm"
-      />
-    </div>
-  </div>
 
-  <nav>
-    <ul>
-      <li class="inline-block mx-2 text-black">
-        <a routerLink="/men" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Men</a>
-      </li>
-      <li class="inline-block mx-2 text-black">
-        <a routerLink="/women" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Women</a>
-      </li>
-      <li class="inline-block mx-2 text-black">
-        <a routerLink="/kids" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Kids</a>
-      </li>
-      <li class="inline-block mx-2 text-black">
-        <a routerLink="/accessories" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Accessories</a>
-      </li>
-      <li class="inline-block mx-2 text-black">
-        <a routerLink="/perfumes" class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full">Perfumes</a>
-      </li>
-    </ul>
-  </nav>
+    <div class="flex items-center gap-4">
+        <h1 class="text-sky-300 font-bold text-3xl">DripLuxury</h1>
+        <div
+        class="w-72 flex items-center gap-3 rounded-full border px-4 py-1 focus-within:border-sky-400"
+        >
+        <fa-icon [icon]="faSearch"></fa-icon>
+        <input
+            type="text"
+            placeholder="Search"
+            class="border-none focus-within:outline-none w-full text-sm"
+        />
+        </div>
+    </div>
 
-  <div class="flex items-center gap-4">
-    <div class="flex items-center gap-2">
-        <fa-icon [icon]="faUser" class="text-2xl text-sky-900"></fa-icon>
-        <p>Login</p>
+    <nav>
+        <ul>
+            <li class="inline-block mx-2 text-black">
+                <a
+                    routerLink="/men"
+                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                >
+                    Men
+                </a>
+            </li>
+            <li class="inline-block mx-2 text-black">
+                <a
+                    routerLink="/women"
+                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                >
+                    Women
+                </a>
+            </li>
+            <li class="inline-block mx-2 text-black">
+                <a
+                    routerLink="/kids"
+                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                >
+                    Kids
+                </a>
+            </li>
+            <li class="inline-block mx-2 text-black">
+                <a
+                    routerLink="/accessories"
+                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                >
+                    Accessories
+                </a>
+            </li>
+            <li class="inline-block mx-2 text-black">
+                <a
+                    routerLink="/perfumes"
+                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                >
+                    Perfumes
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="flex items-center gap-4">
+        <div class="flex items-center gap-2">
+            <fa-icon [icon]="faSignin" class="text-xl text-sky-900"></fa-icon>
+            <a routerLink="/login" class="hover:text-sky-400">Login</a>
+        </div>
+        <div class="flex items-center gap-2">
+            <fa-icon [icon]="faUserPlus" class="text-xl text-sky-900"></fa-icon>
+            <a routerLink="/signup" class="hover:text-sky-400">Signup</a>
+        </div>
     </div>
+
     <div class="flex items-center gap-2">
-        <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
-        <p>Bag</p>
+        <fa-icon [icon]="faBagshopping" class="text-xl text-sky-900"></fa-icon>
+        <a routerLink="/bag" class="hover:text-sky-400">Bag</a>
     </div>
-    <div class="flex items-center gap-2">
-        <fa-icon [icon]="faBagshopping" class="text-2xl text-sky-900"></fa-icon>
-        <p>Bag</p>
-    </div>
-  </div>
 </header>
