--- a/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
+++ b/DripLuxury-Closet/src/app/home-navbar/home-navbar.component.html
@@ -1,11 +1,10 @@
 <header
   class="w-full overflow-hidden bg-white shadow-xl fixed top-0 z-10 px-12 py-5 flex items-center justify-between"
 >
-
-    <div class="flex items-center gap-4">
-        <h1 class="text-sky-300 font-bold text-3xl">DripLuxury</h1>
+    <div class="flex items-center gap-6">
+        <a routerLink="" class="text-sky-300 font-bold text-3xl cursor-pointer">DripLuxury</a>
         <div
-        class="w-72 flex items-center gap-3 rounded-full border px-4 py-1 focus-within:border-sky-400"
+            class="w-72 flex items-center gap-3 rounded-full border px-4 py-1 focus-within:border-sky-400 shadow-md"
         >
         <fa-icon [icon]="faSearch"></fa-icon>
         <input
@@ -21,7 +20,8 @@
             <li class="inline-block mx-2 text-black">
                 <a
                     routerLink="/men"
-                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                    class="text-center hover:text-sky-400 text-base after:content-[''] after:mx-auto 
+                    after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
                 >
                     Men
                 </a>
@@ -29,7 +29,8 @@
             <li class="inline-block mx-2 text-black">
                 <a
                     routerLink="/women"
-                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                    class="text-center hover:text-sky-400 text-base after:content-[''] after:mx-auto 
+                    after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
                 >
                     Women
                 </a>
@@ -37,7 +38,8 @@
             <li class="inline-block mx-2 text-black">
                 <a
                     routerLink="/kids"
-                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                    class="text-center hover:text-sky-400 text-base after:content-[''] after:mx-auto 
+                    after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
                 >
                     Kids
                 </a>
@@ -45,7 +47,8 @@
             <li class="inline-block mx-2 text-black">
                 <a
                     routerLink="/accessories"
-                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                    class="text-center hover:text-sky-400 text-base after:content-[''] after:mx-auto 
+                    after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
                 >
                     Accessories
                 </a>
@@ -53,7 +56,8 @@
             <li class="inline-block mx-2 text-black">
                 <a
                     routerLink="/perfumes"
-                    class="text-center hover:text-sky-400 text-lg after:content-[''] after:mx-auto after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
+                    class="text-center hover:text-sky-400 text-base after:content-[''] after:mx-auto 
+                    after:w-0 after:block after:bg-sky-400 after:h-height after:hover:w-full"
                 >
                     Perfumes
                 </a>
