--- a/DripLuxury-Closet/src/app/login/login.component.html
+++ b/DripLuxury-Closet/src/app/login/login.component.html
@@ -1,47 +1,53 @@
 <div class="w-full flex items-center justify-center flex-col h-screen">
   <div class="w-3/4 bg-white h-auto rounded-xl shadow-2xl grid grid-cols-2">
     <div class="flex flex-col px-12 py-8 w-1/2">
-      <h1 class="text-xl font-medium text-sky-500 mb-10">DripLuxury</h1>
+      <p class="w-full text-xl font-bold text-sky-900 mb-8">DripLuxury</p>
       <form
         [formGroup]="applyLogin"
         (submit)="validateForm()"
         action="#"
         class="w-96 h-auto border-none py-6 px-10 flex gap-4 flex-col"
       >
-        <h4 class="text-center text-2xl text-black font-medium">Login</h4>
+        <h4 class="text-center text-2xl text-sky-900 font-medium">Login</h4>
         <div class="flex flex-col gap-2">
-          <label for="email" class="text-sm text-gray-600 font-medium"
+          <label for="email" class="text-sm text-sky-900 font-medium"
             >Email</label
           >
-          <input
-            type="email"
-            formControlName="email"
-            placeholder="login@email.com"
-            id="email"
-            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-          />
+          <div class="flex items-center gap-3 border border-sky-900 rounded-md px-4 focus-within:border-sky-500">
+            <fa-icon [icon]="faUser" class="text-sky-900"></fa-icon>
+            <input
+              type="email"
+              formControlName="email"
+              placeholder="mildredscott@gmail.com"
+              id="email"
+              class="py-2 focus-within:outline-none"
+            />
+          </div>
         </div>
         <div class="flex flex-col gap-2">
-          <label for="password" class="text-sm text-gray-600 font-medium"
+          <label for="email" class="text-sm text-sky-900 font-medium"
             >Password</label
           >
-          <input
-            type="password"
-            formControlName="email"
-            placeholder="**********"
-            id="password"
-            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-          />
+          <div class="flex items-center gap-3 border border-sky-900 rounded-md px-4 focus-within:border-sky-500">
+            <fa-icon [icon]="faUser" class="text-sky-900"></fa-icon>
+            <input
+              type="password"
+              formControlName="password"
+              placeholder="***********"
+              id="email"
+              class="py-2 focus-within:outline-none"
+            />
+          </div>
         </div>
         <button
           type="submit"
-          class="w-full py-2 bg-sky-300 cursor-pointer text-white font-medium rounded-md hover:bg-white hover:text-sky-300 hover:border-2 hover:border-sky-300"
+          class="w-full py-2 bg-sky-900 cursor-pointer text-white font-medium rounded-md hover:bg-sky-700"
         >
           Login
         </button>
         <a
           routerLink="/signup"
-          class="text-center text-black font-medium hover:underline hover:text-sky-300"
+          class="text-center text-sky-900 font-medium hover:underline hover:text-sky-700"
           >Create an Account</a
         >
       </form>
