--- a/DripLuxury-Closet/src/app/signup/signup.component.html
+++ b/DripLuxury-Closet/src/app/signup/signup.component.html
@@ -1,7 +1,6 @@
 <div class="w-full flex items-center justify-center flex-col h-screen">
   <div class="w-3/4 bg-white h-auto rounded-xl shadow-2xl grid grid-cols-2">
     <div class="flex flex-col px-12 py-8 w-1/2">
-      <h1 class="text-xl font-medium text-sky-500">DripLuxury</h1>
       <form
         [formGroup]="applyLogin"
         (submit)="validateForm()"
@@ -11,50 +10,59 @@
         <h4 class="text-center text-2xl text-black font-bold mb-3">
           Create an Account
         </h4>
-        <div class="flex flex-col">
-          <label for="email" class="text-sm text-gray-600 font-medium"
+        <div class="flex flex-col gap-2">
+          <label for="email" class="text-sm text-sky-900 font-medium"
             >Name</label
           >
-          <input
-            type="text"
-            formControlName="name"
-            placeholder="Anthony Taylor"
-            id="email"
-            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-          />
+          <div class="flex items-center gap-3 border border-sky-900 rounded-md px-4 focus-within:border-sky-500">
+            <fa-icon [icon]="faUser" class="text-sky-900"></fa-icon>
+            <input
+              type="text"
+              formControlName="name"
+              placeholder="Mildred Scott"
+              id="email"
+              class="py-2 focus-within:outline-none"
+            />
+          </div>
         </div>
-        <div class="flex flex-col">
-          <label for="email" class="text-sm text-gray-600 font-medium"
+        <div class="flex flex-col gap-2">
+          <label for="email" class="text-sm text-sky-900 font-medium"
             >Email</label
           >
-          <input
-            type="email"
-            formControlName="email"
-            placeholder="signup@email.com"
-            id="email"
-            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-          />
+          <div class="flex items-center gap-3 border border-sky-900 rounded-md px-4 focus-within:border-sky-500">
+            <fa-icon [icon]="faEnvelope" class="text-sky-900"></fa-icon>
+            <input
+              type="email"
+              formControlName="email"
+              placeholder="mildredscott@gmail.com"
+              id="email"
+              class="py-2 focus-within:outline-none"
+            />
+          </div>
         </div>
-        <div class="flex flex-col">
-          <label for="password" class="text-sm text-gray-600 font-medium"
+        <div class="flex flex-col gap-2">
+          <label for="email" class="text-sm text-sky-900 font-medium"
             >Password</label
           >
-          <input
-            type="password"
-            formControlName="email"
-            placeholder="**********"
-            id="password"
-            class="border-b border-sky-300 cursor-pointer py-2 focus-within:outline-none"
-          />
+          <div class="flex items-center gap-3 border border-sky-900 rounded-md px-4 focus-within:border-sky-500">
+            <fa-icon [icon]="faLock" class="text-sky-900"></fa-icon>
+            <input
+              type="password"
+              formControlName="password"
+              placeholder="**********"
+              id="email"
+              class="py-2 focus-within:outline-none"
+            />
+          </div>
         </div>
         <button
           type="submit"
-          class="w-full py-2 bg-sky-300 cursor-pointer text-white font-medium rounded-md hover:bg-white hover:text-sky-300 hover:border-2 hover:border-sky-300"
+          class="w-full py-2 bg-sky-900 cursor-pointer text-white font-medium rounded-md hover:bg-sky-700"
         >
           Signup
         </button>
-        <p class="text-center text-black text-base">
-          Already Have an Account?
+        <p class="text-center text-sky-900 text-base">
+          Already have an Account?
           <a
             routerLink="/login"
             class="text-sky-500 font-bold hover:underline hover:text-sky-300 cursor-pointer"
