update on offSales component

--- a/DripLuxury-Closet/src/app/home-page/home-page.component.html
+++ b/DripLuxury-Closet/src/app/home-page/home-page.component.html
@@ -1,3 +1,4 @@
-<div class="max-w-full h-auto">
+<div class="max-w-full h-auto bg-white">
     <app-home-navbar></app-home-navbar>
+    <app-off-sales></app-off-sales>      
 </div>
