--- a/DripLuxury-Closet/src/styles.css
+++ b/DripLuxury-Closet/src/styles.css
@@ -1,3 +1,9 @@
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
