update on offsales component

--- a/DripLuxury-Closet/src/app/off-sales/off-sales.component.css
+++ b/DripLuxury-Closet/src/app/off-sales/off-sales.component.css
@@ -1,5 +1,5 @@
 .sales-bg {
-    background-image: url('../../assets/off-sales/man.jpg');
+    background-image: url('../../assets/off-sales/man-2.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
