--- a/DripLuxury-Closet/src/app/off-sales/off-sales.component.html
+++ b/DripLuxury-Closet/src/app/off-sales/off-sales.component.html
@@ -1,8 +1,8 @@
 <div class="relative w-full h-salesHeight sales-bg mt-marginTop">
-    <div class="text-white border-2 border-white">
-        <h5>SALES OFF</h5>
-        <h1>75%</h1>
-        <h2>BLACK FRIDAY</h2>
-        <p>Unbelevable Low Prices</p>
+    <div class="absolute top-28 right-48 text-white w-96 h-auto text-center leading-none gap-0">
+        <h5 class="text-2xl">SALES OFF</h5>
+        <h1 class="text-8xl -mt-2 ml-12 font-bold font-sans">75%</h1>
+        <h2 class="text-5xl font-medium -mt-3 tracking-wide">BLACK FRIDAY</h2>
+        <p class="tracking-widest text-gray-400 text-lg">Unbelevable Low Prices</p>
     </div>
 </div>
