--- a/DripLuxury-Closet/src/app/off-sales/off-sales.component.html
+++ b/DripLuxury-Closet/src/app/off-sales/off-sales.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-full h-salesHeight sales-bg mt-marginTop">
+<div class="relative w-full h-salesHeight sales-bg mt-marginTop overflow-hidden">
     <div class="absolute top-36 right-48 text-white w-96 h-auto text-center leading-none gap-0">
         <h5 class="text-2xl">SALES OFF</h5>
         <h1 class="text-8xl -mt-2 ml-12 font-bold font-sans">75%</h1>
