update on new arrival component

--- a/DripLuxury-Closet/src/app/home-page/home-page.component.html
+++ b/DripLuxury-Closet/src/app/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 <div class="max-w-full h-auto bg-white">
     <app-home-navbar></app-home-navbar>
-    <app-off-sales></app-off-sales>      
+    <app-off-sales></app-off-sales>  
+    <app-new-arrivals></app-new-arrivals>    
 </div>
