--- a/DripLuxury-Closet/src/app/new-arrivals/new-arrivals.component.html
+++ b/DripLuxury-Closet/src/app/new-arrivals/new-arrivals.component.html
@@ -1,1 +1,5 @@
-<p>new-arrivals works!</p>
+<div class="max-w-full h-auto py-12 px-8">
+    <div class="relative w-full bg-aliceBlue p-8">
+        <h2 class="text-sky-900 font-medium text-3xl absolute -top-5 left-28 hover:text-sky-300">New Arrivals</h2>
+    </div>
+</div>
