--- a/DripLuxury-Closet/src/app/cards/cards.component.css
+++ b/DripLuxury-Closet/src/app/cards/cards.component.css
@@ -7,9 +7,31 @@
 .img {
     width: 100%;
     height: 330px;
-    background-image: url('../../assets/New/fendi.jpg');
     background-position: center;
     background-size: cover;
     object-fit: cover;
 }
 
+.img-1 {
+    background-image: url('../../assets/New/fendi.jpg');
+}
+
+.img-2 {
+    background-image: url('../../assets/New/pascal.jpg');
+}
+
+.img-3 {
+    background-image: url('../../assets/New/jordan11.jpg');
+}
+
+.img-4 {
+    background-image: url('../../assets/New/jordan4.jpg');
+}
+
+.img-5 {
+    background-image: url('../../assets/New/nike.jpg');
+}
+
+.img-6 {
+    background-image: url('../../assets/New/white.jpg');
+}
