--- a/DripLuxury-Closet/src/app/cards/cards.component.html
+++ b/DripLuxury-Closet/src/app/cards/cards.component.html
@@ -1,41 +1,41 @@
 <div class="w-full h-auto grid grid-cols-6 items-center gap-6">
     <div class="cards shadow-md hover:shadow-2xl">
-        <div class="img"></div>
+        <div class="img img-1"></div>
         <div class="bg-white py-3 px-6">
             <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
-        <div class="img-2"></div>
+        <div class="img img-2"></div>
         <div class="bg-white py-3 px-6">
             <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
-        <div class="img"></div>
+        <div class="img img-3"></div>
         <div class="bg-white py-3 px-6">
             <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
-        <div class="img"></div>
+        <div class="img img-4"></div>
         <div class="bg-white py-3 px-6">
             <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
-        <div class="img"></div>
+        <div class="img img-5"></div>
         <div class="bg-white py-3 px-6">
             <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
-        <div class="img"></div>
+        <div class="img img-6"></div>
         <div class="bg-white py-3 px-6">
             <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
             <p class="text-orange-600">$54.87</p>
