update on card images

--- a/DripLuxury-Closet/src/app/cards/cards.component.css
+++ b/DripLuxury-Closet/src/app/cards/cards.component.css
@@ -17,11 +17,11 @@
 }
 
 .img-2 {
-    background-image: url('../../assets/New/pascal.jpg');
+    background-image: url('../../assets/New/jordan1.jpg');
 }
 
 .img-3 {
-    background-image: url('../../assets/New/jordan11.jpg');
+    background-image: url('../../assets/New/rendy.jpg');
 }
 
 .img-4 {
@@ -29,9 +29,9 @@
 }
 
 .img-5 {
-    background-image: url('../../assets/New/nike.jpg');
+    background-image: url('../../assets/New/white.jpg');
 }
 
 .img-6 {
-    background-image: url('../../assets/New/white.jpg');
+    background-image: url('../../assets/New/v2.jpg');
 }
