--- a/DripLuxury-Closet/src/app/cards/cards.component.html
+++ b/DripLuxury-Closet/src/app/cards/cards.component.html
@@ -2,15 +2,15 @@
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-1"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
+            <h4 class="text-sky-900 font-medium">Fendi Bag</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-2"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
-            <p class="text-orange-600">$54.87</p>
+            <h4 class="text-sky-900 font-medium">Red Italian Suit</h4>
+            <p class="text-orange-600">$94.90</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
