cards feature update

--- a/DripLuxury-Closet/src/app/cards/cards.component.html
+++ b/DripLuxury-Closet/src/app/cards/cards.component.html
@@ -9,36 +9,36 @@
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-2"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Red Italian Suit</h4>
-            <p class="text-orange-600">$94.90</p>
+            <h4 class="text-sky-900 font-medium">Jordan 1 - Red & Black</h4>
+            <p class="text-orange-600">$24.90</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-3"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
+            <h4 class="text-sky-900 font-medium">Yellow Dress</h4>
             <p class="text-orange-600">$54.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-4"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
-            <p class="text-orange-600">$54.87</p>
+            <h4 class="text-sky-900 font-medium">Jordan 4 - Black & Gold</h4>
+            <p class="text-orange-600">$37.99</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-5"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
-            <p class="text-orange-600">$54.87</p>
+            <h4 class="text-sky-900 font-medium">White Jacket</h4>
+            <p class="text-orange-600">$44.87</p>
         </div>
     </div>
     <div class="cards shadow-md hover:shadow-2xl">
         <div class="img img-6"></div>
         <div class="bg-white py-3 px-6">
-            <h4 class="text-sky-900 font-medium">Fendi Jacket</h4>
-            <p class="text-orange-600">$54.87</p>
+            <h4 class="text-sky-900 font-medium">Nike V2</h4>
+            <p class="text-orange-600">$30.64</p>
         </div>
     </div>
 </div>
