--- a/DripLuxury-Closet/src/app/new-arrivals/new-arrivals.component.html
+++ b/DripLuxury-Closet/src/app/new-arrivals/new-arrivals.component.html
@@ -1,5 +1,5 @@
 <div class="max-w-full h-auto pt-16 px-8">
-    <div class="relative w-full bg-aliceBlue p-8">
+    <div class="relative w-full bg-aliceBlue px-8 py-16">
         <h2 class="text-sky-900 font-medium text-3xl absolute -top-5 left-28 hover:text-sky-300">New Arrivals</h2>
         <app-cards></app-cards>
     </div>
